[project]
name = "testmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Riccio", email = "tylerriccio8@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
testmap = "testmap:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
